<resources>
    <string name="title_home">Home</string>
    <string name="title_campaigns">Campaigns</string>
    <string name="title_friends">Friends</string>
    <string name="title_campaign_view">Campaign</string>
    <string name="title_campaign_detail">Campaign</string>
    <string name="title_campaign_detail_complete">Scenario</string>
    <string name="title_campaign_completed">Result</string>
    <string name="title_campaign_inventory">Inventory</string>
    <string name="title_campaign_active">Current Campaign</string>
    <string name="title_campaign_new">Campaign</string>
    <string name="title_heroes">Heroes</string>
    <string name="title_cards">Cards</string>
    <string name="title_sceneries">Scenarios</string>
    <string name="title_guilds">Guilds</string>
    <string name="title_manage">Settings</string>
    <string name="title_about">Information</string>
    <string name="title_logout">End Session</string>
    <string name="title_home_detail">Profile</string>
    <string name="title_home_detail_statistic">Statistics</string>
    <string name="title_home_detail_campaigns">Stat. Campaigns</string>
    <string name="title_home_detail_sceneries">Stat. Scenarios</string>
    <string name="title_observation">Obs</string>
    <string name="title_share_campaign">Share Campaign</string>
    <string name="title_open_campaign">View Campaign</string>
    <string name="btn_login">LOG IN</string>
    <string name="btn_sign_in">CREATE ACCOUNT</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_create">CREATE</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_ok">OK</string>
    <string name="btn_share">SHARE</string>
    <string name="btn_open">OPEN</string>
    <string name="btn_confirmation_dialog_exit">LEAVE</string>
    <string name="btn_confirmation_dialog_cancel">CANCEL</string>
    <string name="btn_confirmation_dialog_delete">DELETE</string>
    <string name="btn_confirmation_dialog_remove">REMOVE</string>
    <string name="btn_confirmation_dialog_play">PLAY</string>
    <string name="btn_confirmation_dialog_finish">FINISH</string>
    <string name="hint_hero_ability">Abil. : {0}</string>
    <string name="hint_card_group">Group: {0}</string>
    <string name="hint_card_group_card">Group</string>
    <string name="hint_hero_group_hero">Group</string>
    <string name="hint_card_type_effect">Type: {0}</string>
    <string name="hint_scenery_head">{0} - {1}</string>
    <string name="hint_saved_username">Remember me!</string>
    <string name="hint_btn_login">Login</string>
    <string name="hint_btn_mail">E-mail</string>
    <string name="hint_text_login">*¹ Username must contain between 5 and 30 characters containing letters, numbers and/or the following characters \'_\', \'-\' e \'.\'.</string>
    <string name="hint_text_login_samples">*¹ Example: user01, user.01, user-01 ou user_01.</string>
    <string name="hint_text_mail">*² Must be a valid e-mail.</string>
    <string name="hint_text_partten_mail">*³ Your profile image will be the same as the corresponding http://gravatar.com image for your e-mail.</string>
    <string name="hint_detail_alias_campaign">Campaign alias</string>
    <string name="hint_text_detail_alias_campaign">*¹ The alias will be used to identify your campaign.</string>
    <string name="hint_detail_friend_login">Friend/user login</string>
    <string name="hint_detail_friends_and_user">User/Friends</string>
    <string name="hint_detail_guilds">Guilds</string>
    <string name="hint_detail_guilds_login">Guild/User login</string>
    <string name="hint_detail_guilds_login_blue">Guild/User login</string>
    <string name="hint_detail_guilds_login_red">Guild/User login</string>
    <string name="hint_detail_guilds_login_green">Guild/User login</string>
    <string name="hint_detail_guilds_login_orange">Guild/User login</string>
    <string name="hint_text_detail_guilds_friends">*¹ Add new friends to make it easier to select them as guild login/user.</string>
    <string name="hint_text_detail_guilds_login">*¹ Must be a guild login already registered in app.</string>
    <string name="hint_text_detail_guilds_login_2">*² When "Invalid guild login", it will be necessary to create a new login or add a new friend.</string>
    <string name="hint_detail_heroes">Heroes</string>
    <string name="hint_detail_heroes_guild_blue_title">Eagle Guild</string>
    <string name="hint_detail_heroes_guild_green_title">Panda Guild</string>
    <string name="hint_detail_heroes_guild_orange_title">Lion Guild</string>
    <string name="hint_detail_heroes_guild_red_title">Fox Guild</string>
    <string name="hint_detail_heroes_guild_hero_01">Hero 01</string>
    <string name="hint_detail_heroes_guild_hero_02">Hero 02</string>
    <string name="hint_detail_heroes_guild_hero_03">Hero 03</string>
    <string name="hint_detail_heroes_selected">*¹ You must select all three heroes for all active guild!</string>
    <string name="hint_detail_group_heroes_selected">Select the group of Heroes that are being used in the active campaign!</string>
    <string name="hint_detail_scenery">Scenario</string>
    <string name="hint_detail_scenery_current">Current scenario</string>
    <string name="hint_detail_scenery_current_result">Results</string>
    <string name="hint_detail_scenery_location">Location</string>
    <string name="hint_detail_scenery_name">Name</string>
    <string name="hint_detail_scenery_selected_location">*¹ The scenario\'s active location is pre-selected according to the number of finished scenarios in current campaign!</string>
    <string name="hint_detail_scenery_selected">*² You can only select among the available scenarios for current location!</string>
    <string name="hint_detail_home_statistic_campaigns">Campaigns played:</string>
    <string name="hint_detail_home_statistic_campaigns_guilds">Guilds used:</string>
    <string name="hint_detail_home_statistic_campaigns_completed">Finished campaigns:</string>
    <string name="hint_detail_home_statistic_campaigns_winners">Victories in campaigns:</string>
    <string name="hint_detail_home_statistic_campaigns_defeats">Defeats in campaigns:</string>
    <string name="hint_detail_home_statistic_campaigns_medals_winners">Victory medals:</string>
    <string name="hint_detail_home_statistic_campaigns_medals_least_deaths">Least Death medals:</string>
    <string name="hint_detail_home_statistic_campaigns_medals_most_coins">Most Coins medals:</string>
    <string name="hint_detail_home_statistic_campaigns_medals_won_rewards">Received Rewards medals:</string>
    <string name="hint_detail_home_statistic_campaigns_medals_won_titles">Received Titles medals:</string>
    <string name="hint_detail_home_statistic_sceneries">Finished scenarios:</string>
    <string name="hint_detail_home_statistic_sceneries_winners">Victories in scenarios:</string>
    <string name="hint_detail_home_statistic_sceneries_defeats">Defeats in scenarios:</string>
    <string name="hint_detail_home_statistic_sceneries_least_deaths">Least deaths:</string>
    <string name="hint_detail_home_statistic_sceneries_most_coins">Most coins:</string>
    <string name="hint_detail_home_statistic_sceneries_won_rewards">Received rewards:</string>
    <string name="hint_detail_home_statistic_sceneries_won_titles">Received titles:</string>
    <string name="hint_detail_card_view_scenery_winner">Scenario winner</string>
    <string name="hint_detail_card_view_scenery_least_deaths">Least deaths:</string>
    <string name="hint_detail_card_view_scenery_most_coins">Most coins:</string>
    <string name="hint_detail_card_view_scenery_won_reward">Received reward:</string>
    <string name="hint_detail_card_view_scenery_won_title">Received title:</string>
    <string name="hint_detail_card_view_scenery_saved_coin">Kept coin:</string>
    <string name="hint_complete_sceneries_completed">Completed Scenarios</string>
    <string name="hint_complete_winner">Victorious guild</string>
    <string name="hint_complete_winners_medals">Received medals</string>
    <string name="hint_complete_winners_winners">Winners:</string>
    <string name="hint_complete_winners_least_deaths">Least deaths:</string>
    <string name="hint_complete_winners_most_coins">Most coins:</string>
    <string name="hint_complete_winners_won_rewards">Received rewards:</string>
    <string name="hint_complete_winners_won_titles">Received titles:</string>
    <string name="hint_complete_winner_text">{0} guild won the sixth and last campaign scenario (the Final Showdown), Arcadia is finally free! You have the power and glory for taking back Arcadia! But your actions along the campaign will determine how much of Arcadia you really control, now that the city has been taken back.</string>
    <string name="hint_add_friends_obs">Register a new friend to play in your campaign.</string>
    <string name="hint_add_friends_obs_1">If a player is interested in using the app, he must register on first screen.</string>
    <string name="hint_add_friends_obs_2">A player registered as friend can only play campaigns for another player registered as friend. He will not have access to the app.</string>
    <string name="hint_add_friends_obs_3">Obs.: You can add login another player as a friend.</string>
    <string name="hint_view_card_guild_name">Guild {0}</string>
    <string name="hint_view_card_username">User: {0}</string>
    <string name="hint_view_user_winner">Winning player: {0}</string>
    <string name="hint_view_scenery_current">Scenario {0}</string>
    <string name="hint_view_card_guild_user">Guild {0} ({1})</string>
    <string name="hint_view_inventory_guild_name">Inventory {0}</string>
    <string name="hint_view_inventory_username">User: {0}</string>
    <string name="hint_view_inventory_cards">* Add each guild\'s cards so far (for that, use card codes) and the Death curse cards your heroes might possess.</string>
    <string name="hint_view_inventory_cards_keys">* Its only possible to add codes for Upgrades and Death Curse cards that are registered in the app. For more details, access Cards menu!</string>
    <string name="hint_view_inventory_card_upgrade_01">Card 01</string>
    <string name="hint_view_inventory_card_upgrade_02">Card 02</string>
    <string name="hint_view_inventory_card_upgrade_03">Card 03</string>
    <string name="hint_view_inventory_card_upgrade_04">Card 04</string>
    <string name="hint_view_inventory_card_death_curse_01">Death Curse</string>
    <string name="hint_view_inventory_comments">Comments</string>
    <string name="hint_share_camping">See details for my campaign [{0}] through {1} app!</string>
    <string name="hint_title_share_camping">Details for campaign</string>
    <string name="hint_key_camping">Campaign key (Ex: AQ-CB-XX)</string>
    <string name="msg_failed_already_exists_friend">Error creating Friend/User login! Please try another login!</string>
    <string name="msg_failed_already_exists_user">Error creating User! Please try with another login or e-mail!</string>
    <string name="msg_failed_create_user">Error creating User! Follow screen steps!</string>
    <string name="msg_failed_create_campaign">Error creating Campaign! Follow screen steps!</string>
    <string name="msg_failed_update_campaign">Error updating Campaign! Follow screen steps!</string>
    <string name="msg_failed_login_user">Invalid login! Check if your user exists. Please try again!</string>
    <string name="msg_failed_login_friend">Invalid login! User registered as friend does not have access to this app! Please, create a new user!</string>
    <string name="msg_failed_key_campaign">Invalid Campaign Key! Check if the campaign exists!</string>
    <string name="msg_key_required">Campaign key is mandatory!</string>
    <string name="msg_username_required">Login is mandatory!</string>
    <string name="msg_mail_required">E-mail is mandatory!</string>
    <string name="msg_action_loading">Wait! Loading&#8230;</string>
</resources>