<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_view_campaign"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/no_dimen"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/dialog_view_campaign_container"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_margin="2dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_view_campaign_title"
                style="@style/CardTitle02Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/title_open_campaign"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_view_campaign_key"
                    style="@style/InputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_key_camping"
                    android:imeOptions="actionDone"
                    android:inputType="textAutoComplete"
                    android:maxLines="1"
                    android:textAllCaps="true"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/dialog_view_campaign_btn_open"
            style="@style/ButtonStyleActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/dialog_view_campaign_container"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/btn_open"/>

        <Button
            android:id="@+id/dialog_view_campaign_btn_cancel"
            style="@style/ButtonBorderLessStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_view_campaign_container"
            android:layout_toLeftOf="@id/dialog_view_campaign_btn_open"
            android:layout_toStartOf="@id/dialog_view_campaign_btn_open"
            android:text="@string/btn_cancel"/>

    </RelativeLayout>

</FrameLayout>