<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:card_view="http://schemas.android.com/tools"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 tools:context="br.com.battista.arcadiacaller.fragment.detail.CampaignDetailSceneryFragment">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/fab_margin_bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/detail_card_view_scenery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:foreground="?attr/selectableItemBackground"
                android:padding="@dimen/no_dimen"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="1dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:padding="@dimen/element_padding">

                    <TextView
                        android:id="@+id/detail_card_view_scenery_title"
                        style="@style/CardTitle02Style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_detail_scenery"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:background="@color/gray"/>

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/detail_card_view_scenery_location"
                        style="@style/InputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_detail_scenery_location"
                        android:enabled="false"

                        app:met_floatingLabel="highlight"/>

                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                        android:id="@+id/detail_card_view_scenery_name"
                        style="@style/InputStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_detail_scenery_name"

                        app:met_floatingLabel="highlight"/>

                    <TextView
                        style="@style/HintTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/hint_detail_scenery_selected_location"/>

                    <TextView
                        style="@style/HintTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/element_vertical_margin"
                        android:text="@string/hint_detail_scenery_selected"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_img_height"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_done_scenery_campaign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_anchor="@id/detail_scroll_view"
        app:layout_anchorGravity="bottom|right"
        app:srcCompat="@drawable/ic_done"/>


</android.support.design.widget.CoordinatorLayout>
